--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,1 +1,11 @@
+<% if current_user %>
+    <script>
+        window.currentUser = {
+            "id": "<%= current_user.id %>",
+            "email": "<%= current_user.email %>"
+        }
+    </script>
+
+<% end %>
+
 <main id="root"></main>
