Update signup css file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,11 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <script type="text/javascript">
+      window.signup1URL = "<%= image_url('signup1.png') %>";
+      window.signup2URL = "<%= image_url('signup2.png') %>";
+      window.signup3URL = "<%= image_url('signup3.png') %>";
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
