--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -18,15 +18,15 @@ span, article, footer, time, small {
 
 ul {
   list-style: none;
-}
+} */
 
-img {
+/* img {
   display: block;
   width: 100%;
   height: auto;
-}
+} */
 
-input[type="password"],
+/* input[type="password"],
 input[type="email"],
 input[type="text"],
 input[type="submit"],
@@ -40,3 +40,17 @@ button,
 input[type="submit"] {
   cursor: pointer;
 } */
+
+html, body, header, div {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font: inherit;
+  color: inherit;
+  text-align: inherit;
+  text-decoration: inherit;
+  vertical-align: inherit;
+  box-sizing: inherit;
+  background: transparent;
+}
