Update profile page layout

--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -2,6 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+
 .navbar {
     display: flex;
     justify-content: space-around;
@@ -24,5 +26,108 @@
     border-radius: 50%;
     height: 30px;
     width: 35px;
+}
+
+.profile-main {
+    background-color: #E9EBEE;
+    height: 2000px;
+}
+
+.profile-container {
+    width: 900px;
+    margin: 0 auto;
+}
+
+.profile-left {
+    width: 40%;
+    float: left;
+}
+
+.profile-right {
+    width: 60%;
+    float: right;
+}
+
+.profile-top {
+    position: relative;
+    width: inherit;
+    height: 400px;
+}
+
+.profile-top h1 {
+  position: absolute;
+  bottom: 80px;
+  left: 35%;
+  color: white;
+}
+
+
+.profile-photo {
+  position: absolute;
+  bottom: 30px;
+  left: 15px;
+}
+
+.profile-photo img {
+    height: 180px;
+    width: 180px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 5px solid white;
+}
+
+.profile-cover img {
+    width: 100%;
+    height: 320px;
+    object-fit: cover;
+}
+
+
+//profile info
+
+.profile-info {
+    border: 2px solid black;
+    width: 340px;
+    height: 460px;
+    margin-bottom: 15px;
+    // position: absolute;
+    // float: right;
+    // display: inline;
+    background-color: white;
+
+}
+
+.profile-post-form {
+    border: 2px solid black;
+    width: 530px;
+    height: 155px;
+    margin-bottom: 15px;
+    // position: absolute;
+    // float: right;
+    display: inline-flex;
+    float: right;
+    background-color: white;
+
+}
+
+.profile-friends {
+    border: 2px solid black;
+    width: 340px;
+    height: 500px;
+    margin-bottom: 15px;
+    display: inline-flex;
+    background-color: white;
+
+}
+
+.profile-post-index {
+    border: 2px solid black;
+    width: 530px;
+    height: 1300px;
+    display: inline-flex;
+    float: right;
+    vertical-align: top;
+    background-color: white;
+
 }
 
