Add Not Found Page

--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -44,6 +44,21 @@
     font-weight: bold;
 }
 
+
+//Not Found
+
+.not-found {
+    width: 600px;
+    margin: 180px auto;
+}
+
+.not-found-child {
+    text-align: center;
+      display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .profile-main {
     background-color: #E9EBEE;
     height: 2000px;
