--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
       window.navHelpURL = "<%= image_url('nav-help.png') %>";
       window.avatarURL = "<%= image_url('avatar.png') %>";
       window.coverURL = "<%= image_url('cover-default.jpg') %>";
+      window.notFoundURL = "<%= image_url('not-found.png') %>";
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all' %>
