Add Back to Newfeed link

--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -54,9 +54,10 @@
 
 .not-found-child {
     text-align: center;
-      display: block;
+    display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 10px;
 }
 
 .profile-main {
