Add friending functionality

--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -93,6 +93,12 @@
   color: white;
 }
 
+.profile-top button {
+  position: absolute;
+  bottom: 100px;
+  right: 5%;
+}
+
 
 .profile-photo {
   position: absolute;
