--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       window.avatarURL = "<%= image_url('avatar.png') %>";
       window.coverURL = "<%= image_url('cover-default.jpg') %>";
       window.notFoundURL = "<%= image_url('not-found.png') %>";
+      window.friendsURL = "<%= image_url('friends.png') %>";
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all' %>
