--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -150,7 +150,7 @@
 }
 
 .profile-friends {
-    border: 2px solid black;
+    border: 2px solid #DDDFE2;
     width: 340px;
     height: 500px;
     margin-bottom: 15px;
