--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -14,7 +14,7 @@
 
 .navbar img {
     height: 30px;
-    width: 35px;
+    width: 30px;
 }
 
 .navbar-avatar {
@@ -119,6 +119,7 @@
     width: 100%;
     height: 320px;
     object-fit: cover;
+    z-index: 1;
 }
 
 
