--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -61,6 +61,9 @@
     margin-bottom: 10px;
 }
 
+
+//Profile
+
 .profile-main {
     background-color: #E9EBEE;
     height: 2000px;
@@ -169,5 +172,12 @@
     vertical-align: top;
     background-color: white;
 
+}
+
+
+//Feed
+
+.feed-main {
+    min-height: 2000px;
 }
 
