--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,20 @@
       window.coverURL = "<%= image_url('cover-default.jpg') %>";
       window.notFoundURL = "<%= image_url('not-found.png') %>";
       window.friendsURL = "<%= image_url('friends.png') %>";
+      window.introURL = "<%= image_url('intro.png') %>";
+      window.introCityURL = "<%= image_url('intro-city.png') %>";
+      window.introFromURL = "<%= image_url('intro-from.png') %>";
+      window.introJoinURL = "<%= image_url('intro-join.png') %>";
+      window.introStudyURL = "<%= image_url('intro-study.png') %>";
+      window.introWorkURL = "<%= image_url('intro-work.png') %>";
+
+
+
+
+
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
