Update profile picture

--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -125,6 +125,48 @@
     z-index: 1;
 }
 
+.file-upload {
+    color: transparent;
+    opacity:0; 
+    width: 179px;
+    height: 84px;  
+    position: absolute;
+    top: 100px;
+    left: 6px;
+    border-bottom-right-radius: 100px;
+    border-bottom-left-radius: 100px;
+    // border: 1px solid red;
+}
+
+
+.file-upload::-webkit-file-upload-button {
+  visibility: hidden;
+}
+
+.file-upload-label {
+    color: transparent;
+    position: absolute;
+    top: 120px;
+    left: 67px;
+    font-family: 'PT Serif', serif;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.file-upload:hover {
+    background-color: black;
+    opacity: 70%;   
+}
+
+
+.file-upload:hover + label {
+    color: #EAEBEE;    
+}
+
+.file-upload:focus {
+    outline: none;
+}
+
 
 //profile info
 
