--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -10,11 +10,15 @@
     align-items: center;
     background-color: #4267B2;
     height: 40px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 10;
 }
 
 .navbar img {
     height: 30px;
-    width: 30px;
+    width: 35px;
 }
 
 .navbar-avatar {
@@ -44,6 +48,39 @@
     color: 'white';
     font-weight: bold;
 }
+
+.navbar-feed {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-decoration: 'none';
+    font-size: 14px;
+    color: 'white';
+    font-weight: bold;
+}
+
+.navbar-feed:hover {
+    background-color: #3C5CA2
+}
+
+.navbar-home {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 34px;
+    width: 92px;
+    text-decoration: 'none';
+    // padding: 2px 6px;
+    font-size: 14px;
+    color: 'white';
+    font-weight: bold;
+}
+
+.navbar-home:hover {
+    background-color: #3C5CA2
+}
+
+
 
 
 //Not Found
@@ -283,6 +320,60 @@
     color: #385898;
     cursor: pointer;
     text-decoration: none;
+}
+
+//Search bar
+
+.search-bar {
+    margin-left: 0;
+    min-width: 144px;
+    width: 100%;
+    background-color: #fff;
+    border: 1px solid #3b5998;
+    border-radius: 3px;
+    box-sizing: border-box;
+    height: 26px;
+    left: -1px;
+    margin-left: 30px;
+    margin-top: 0;
+    max-width: 448px;
+    overflow: hidden;
+    position: relative;
+    display: block;
+}
+
+.search-bar input {
+    color: #1d2129;
+    padding-left: 0;
+    padding-right: 5px;
+    height: 20px;
+    padding-top: 0;
+    line-height: 22px;
+    padding: 3px 0 0;
+    border: none;
+    font-size: 14px;
+    left: 10px;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    outline: none;
+}
+
+.search-bar button {
+    background: #f5f6f7;
+    border: none;
+    border-radius: 0 2px 2px 0;
+    bottom: 0;
+    cursor: pointer;
+    display: block;
+    line-height: 1;
+    padding: 0 16px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    outline: none;
+
+
 }
 
 
