Finish styling post form

--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -1,3 +1,85 @@
 // Place all the styles related to the api/posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+.post-form {
+    height: 154px;
+    // width: 100%;
+
+}
+
+.post-form-header{
+    height: 35px;
+    display: flex;
+    align-items: center;
+    background-color: #f5f6f7;
+    border-bottom: 1px solid #dddfe2;
+    border-radius: 2px 2px 0 0;
+    font-weight: bold;
+    padding-left: 10px;
+}
+
+.post-form-header img{
+    height: 16px;
+    width: 16px;
+}
+
+.post-form-header span{
+    margin-left: 5px;
+    font-family: 'PT Serif', serif;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.post-form-body {
+    display: flex;
+    align-items: center;
+    min-height: 120px;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    border: none;
+    border-bottom: 1px solid #EAEBEE;
+}
+
+.post-form-avatar {
+    border-radius: 50%;
+    height: 42px;
+    width: 42px;
+    object-fit: cover;
+}
+
+.post-form div textarea{
+    margin: 10px;
+    margin-left: 15px;
+    min-height: 100px;
+    width: 95%;
+    resize: none;
+    outline: none;
+    display: block;
+    border: none;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+
+}
+
+.post-form input{
+    width: 490px;
+    height: 28px;
+    background-color: #4267B2;
+    color: white;
+    display: block;
+    margin: 0 auto;
+    margin-top: 10px;
+}
+
+::-webkit-input-placeholder { 
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+}
+
+input[disabled=disabled], input:disabled {
+    opacity: 0.4;
+}
