--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -217,13 +217,10 @@
 }
 
 .profile-post-form {
-    border: 2px solid black;
+    border: 2px solid #DDDFE2;
     width: 530px;
-    height: 155px;
+    height: 210px;
     margin-bottom: 15px;
-    // position: absolute;
-    // float: right;
-    display: inline-flex;
     float: right;
     background-color: white;
 
