--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
       window.introJoinURL = "<%= image_url('intro-join.png') %>";
       window.introStudyURL = "<%= image_url('intro-study.png') %>";
       window.introWorkURL = "<%= image_url('intro-work.png') %>";
+      window.createPostURL = "<%= image_url('create-post.png') %>";
 
 
 
