--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -391,5 +391,48 @@
 
 .feed-main > div {
     display: block;
+} 
+
+.social-links {
+    float: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 200px;
+    margin-top: 100px;
+}
+
+.social-link-item {
+    width: 185px;
+    height: 35px;
+    padding: 1px;
+    display: flex;
+    align-items: center;
+}
+
+.social-link-item :hover {
+   background-color: gray;
+}
+
+.social-link-item a {
+    margin-left: 8px;
+    display: flex;
+    align-items: center;
+}
+
+.social-link-item span {
+    margin-left: 8px;
+}
+
+.social-links img {
+    width: 25px;
+    height: 25px;
+}
+
+.social-links a {
+    font-family: "PT Serif", serif;
+    font-size: 16px;
+    color: black;
+    text-decoration: none;
 }
 
