--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,8 @@
       window.introStudyURL = "<%= image_url('intro-study.png') %>";
       window.introWorkURL = "<%= image_url('intro-work.png') %>";
       window.createPostURL = "<%= image_url('create-post.png') %>";
+      window.linkedInURL = "<%= image_url('linkedin.png') %>";
+      window.gitHubURL = "<%= image_url('github.png') %>";
 
 
 
