--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -399,7 +399,8 @@
     // display: flex;
     // flex-direction: column;
     margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 40px;
+    background-color: #E9EBEE;
 }
 
 .feed-main > div {
