--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -41,7 +41,7 @@ input[type="submit"] {
   cursor: pointer;
 } */
 
-html, body, header, div, li {
+html, body, header, div, li, ul {
   margin: 0;
   padding: 0;
   border: 0;
