Add delete icon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
       window.createPostURL = "<%= image_url('create-post.png') %>";
       window.linkedInURL = "<%= image_url('linkedin.png') %>";
       window.gitHubURL = "<%= image_url('github.png') %>";
+      window.deleteURL = "<%= image_url('delete.png')%>";
 
 
 
