Remove post styling

--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -152,6 +152,11 @@ input[disabled=disabled], input:disabled {
     margin: 5px;
 }
 
+.post-header-delete img {
+    height: 15px;
+    width: 15px;
+}
+
 .post-body {
     width: 90%;
     min-height: 100px;
