Remove post styling

--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -150,6 +150,8 @@ input[disabled=disabled], input:disabled {
     top:0;
     right:0;
     margin: 5px;
+    height: 15px;
+    width: 15px;
 }
 
 .post-header-delete img {
