Delete post hover

--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -149,9 +149,14 @@ input[disabled=disabled], input:disabled {
     position:absolute;
     top:0;
     right:0;
-    margin: 5px;
+    margin: 8px;
     height: 15px;
     width: 15px;
+    opacity: 0.4;
+}
+
+.post-header-delete:hover {
+    opacity: 1;
 }
 
 .post-header-delete img {
