Add delete comment button

--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -99,3 +99,15 @@
     color: white;
     text-align: center;
 }
+
+.comment-delete{
+    margin: 8px;
+    height: 15px;
+    width: 15px;
+    opacity: 0.4;
+}
+
+.comment-delete:hover {
+    opacity: 1;
+}
+
