--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,7 @@
       window.linkedInURL = "<%= image_url('linkedin.png') %>";
       window.gitHubURL = "<%= image_url('github.png') %>";
       window.deleteURL = "<%= image_url('delete.png')%>";
-
-
+      window.moreURL = "<%= image_url('more.png')%>";
 
 
 
