--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -446,7 +446,7 @@
     flex-direction: column;
     justify-content: space-between;
     margin-left: 200px;
-    margin-top: 100px;
+    margin-top: 50px;
     position: fixed;
 }
 
@@ -471,7 +471,7 @@
 }
 
 .social-link-item:hover {
-    background-color: #EAEBEE;
+    background-color: #F5F6F7;
     border-radius: 2px;
     border: 1px solid #DDDFE2;
 }
