Update profile and posts styling

--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -145,6 +145,7 @@
   bottom: 80px;
   left: 35%;
   color: white;
+  text-transform: capitalize;
 }
 
 .profile-top button {
@@ -416,6 +417,7 @@
     color: black;
     text-decoration: none;
     padding-left: 10px;
+    text-transform: capitalize;
 }
 
 .search-link:hover {
