--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -133,6 +133,7 @@ input[disabled=disabled], input:disabled {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-weight: bold;
+    text-transform: capitalize;
 }
 
 .post-header-date {
