Update intro form styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
       window.introStudyURL = "<%= image_url('intro-study.png') %>";
       window.introWorkURL = "<%= image_url('intro-work.png') %>";
       window.createPostURL = "<%= image_url('create-post.png') %>";
+      window.newPostURL = "<%= image_url('new-post.png') %>";
       window.linkedInURL = "<%= image_url('linkedin.png') %>";
       window.gitHubURL = "<%= image_url('github.png') %>";
       window.deleteURL = "<%= image_url('delete.png')%>";
