--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -225,6 +225,7 @@
     border: 2px solid #DDDFE2;
     width: 340px;
     min-height: 200px;
+    padding-bottom: 15px;
     margin-bottom: 15px;
     background-color: white;
     position: relative;
@@ -302,6 +303,20 @@
     font-family: 'PT Serif', serif;
 }
 
+.intro-about-edit {
+    width: 290px;
+    min-height: 50px;
+    padding: 8px;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    margin-left: 15px;
+    text-align: center;
+    font-size: 14px;
+    font-family: 'PT Serif', serif;
+
+    resize: none;
+}
+
 .intro-items {
     width: 305px;
     margin-left: 15px;
@@ -319,7 +334,15 @@
     line-height: 30px;
     font-size: 14px;
     font-family: 'PT Serif', serif;
+    position: relative;
 
+}
+
+.intro-input{
+    position: absolute;
+    right: 0;
+    top: 4px;
+    padding-left: 4px;
 }
 
 .intro-items img {
@@ -342,14 +365,29 @@
     top:0;
     right:0;
     margin: 8px;
-    height: 15px;
-    width: 15px;
+    height: 20px;
+    width: 20px;
     opacity: 0.4;
 }
 
 .intro-edit:hover {
     opacity: 1;
 }
+
+.intro-edit-actions {
+    display: block;
+    margin-left: 55%;
+}
+
+.intro-edit-actions button {
+
+    background-color: #4267B2;
+    color: white;
+    text-align: center;
+    margin: 5px;
+}
+
+
 
 
 //Search bar
