Intro form input styling

--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -343,6 +343,9 @@
     right: 0;
     top: 4px;
     padding-left: 4px;
+    width: 192px;
+    font-size: 12px;
+    font-family: 'PT Serif', serif;
 }
 
 .intro-items img {
