--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -93,7 +93,7 @@ input[disabled=disabled], input:disabled {
     width: 100%;
     margin: 0;
     padding: 0;
-
+    padding-bottom: 50px;
 }
 
 .post-index-item {
