--- a/app/assets/stylesheets/api/friendships.scss
+++ b/app/assets/stylesheets/api/friendships.scss
@@ -79,7 +79,8 @@
 
 
 .dropdown-friends:hover {
-    background-color: #3C5CA2
+    background-color: #3C5CA2;
+    cursor: pointer;
 }
 
 .dropdown-requests {
