--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -82,12 +82,21 @@
 } 
 
 .navbar-logout {
-    background-color: #ffffff;
+    background-color: #FEFEFE;
+    font-family: 'PT Serif', serif;
     font-size: 14px;
     color: 'white';
     color: #000000;
     height: 25px;
     border: none;
+    font-weight: bold;
+    transition: background-color color 300ms;
+}
+
+.navbar-logout:hover {
+    background-color: #010101;
+    color: #4267B2;
+    cursor: pointer;
 }
 
 .navbar-help img {
