--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
       window.signup3URL = "<%= image_url('signup3.png') %>";
       window.navLogoURL = "<%= image_url('nav-logo.png') %>";
       window.navRequestsURL = "<%= image_url('nav-requests.png') %>";
+      window.addFriendURL = "<%= image_url('add-friend.png') %>";
       window.navHelpURL = "<%= image_url('nav-help.png') %>";
       window.avatarURL = "<%= image_url('avatar.png') %>";
       window.coverURL = "<%= image_url('cover-default.jpg') %>";
