--- a/app/assets/stylesheets/api/profiles.scss
+++ b/app/assets/stylesheets/api/profiles.scss
@@ -18,6 +18,13 @@
     z-index: 10;
 }
 
+.navbar-links {
+    width: 400px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .navbar img {
     height: 30px;
     width: 35px;
@@ -25,9 +32,10 @@
 
 .navbar-avatar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    min-width: 80px;
+    // min-width: 80px;
+    width: 92px;
     text-decoration: 'none';
     color: 'white';
     padding: 2px 6px;
