--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Railsbook</title>
+    <%= favicon_link_tag asset_path('nav-logo.png') %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
