Added like button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,8 @@
       window.gitHubURL = "<%= image_url('github.png') %>";
       window.deleteURL = "<%= image_url('delete.png')%>";
       window.moreURL = "<%= image_url('more.png')%>";
+      window.likeURL = "<%= image_url('like.png')%>";
+      window.dislikeURL = "<%= image_url('dislike.png')%>";
 
 
 
