--- a/app/assets/stylesheets/api/likes.scss
+++ b/app/assets/stylesheets/api/likes.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the api/likes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.like-body {
+    display: flex;
+    justify-content: space-between;
+    width: 92%;
+    margin: 0 auto;
+}
+
+.like-btn{
+    width: 155px;
+    height: 30px;
+}
