Update styling likes and comments

--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -78,6 +78,11 @@
     align-items: center;
 }
 
+.comment-content {
+    font-family: 'PT Serif', serif;
+    font-size: 14px;
+}
+
 .comment-form-body textarea {
     background-color: #f2f3f5;
     border: 1px solid #ccd0d5;
